feat: se agregó servicio y endpoint para avalar plan
